@@ -21,4 +21,4 @@
 [submodule "ThirdParty/Mumps"]
 	path = ThirdParty/Mumps
 	url = git://github.com/coin-or-tools/ThirdParty-Mumps.git
-	branch = stable/1.0
+	branch = stable/1.1
