@@ -3,4 +3,4 @@ ThirdParty/ASL     https://projects.coin-or.org/svn/BuildTools/ThirdParty/ASL/st
 ThirdParty/HSL     https://projects.coin-or.org/svn/BuildTools/ThirdParty/HSL/stable/1.1
 ThirdParty/Blas    https://projects.coin-or.org/svn/BuildTools/ThirdParty/Blas/stable/1.0
 ThirdParty/Lapack  https://projects.coin-or.org/svn/BuildTools/ThirdParty/Lapack/stable/1.0
-ThirdParty/Mumps   https://projects.coin-or.org/svn/BuildTools/ThirdParty/Mumps/stable/1.0
+ThirdParty/Mumps   https://projects.coin-or.org/svn/BuildTools/ThirdParty/Mumps/stable/1.1
